[package]
name = "rust-cri-kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.2"
prost = "0.11.0"
tonic-build = "0.8.2"
proc-macro2 = "1.0.47"
syn = {version = "1.0.103", features = ["full", "extra-traits", "visit-mut"]}
quote = "1.0.21"
prettyplease = "0.1.21"

[build-dependencies]
prost = "0.11.0"



[features]
default = ["v1"]

v1 = []

v1alpha2 = []
