[package]
name = "cri-kit"
version = "0.3.0"
edition = "2021"
description = "cri kit for rust CRI container runtime interface devs"
authors = ["CGQAQ <m.jason.liu@outlook.com"]
license = "MPL-2.0"
license-file = "./LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-build = "0.8.2"
proc-macro2 = "1.0.47"
syn = {version = "1.0.103", features = ["full", "extra-traits", "visit-mut"]}
quote = "1.0.21"
prettyplease = "0.1.21"
change-case = "0.2.0"

[features]
default = ["v1"]

v1 = []

v1alpha2 = []

[workspace]
members = [
    "example"
]
