[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
rust-cri-kit = { version = "0.1.0", path = ".." }
tonic = "0.8.2"

[build-dependencies]
rust-cri-kit = { version = "0.1.0", path = ".." }
